Corrected excess spacing
Fixing layout for text and paragraphs

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ p{
 	background-color: #CAE4DB;
 	color: #00303F;
 	letter-spacing: 2px;
-	margin: 0px;
+	margin: 10px;
 	padding: 20px;
 	border-radius: 10px;
 }
@@ -28,8 +28,7 @@ h2 {
  font-family: 'Shadows Into Light', cursive;
  max-height: 40px;
  border-radius: 5px;
- margin: 0px;
-}
+ margin: 0px;}
 img {
 	padding: 20px; 
 }
@@ -39,7 +38,7 @@ img {
 	max-width: 1200px;
 	display: grid;
 	grid-auto-columns: 2fr 1fr;
-	grid-auto-rows: minmax(auto, 500px);
+	grid-auto-rows: minmax(auto, auto);
 }
 footer {
 	grid-column: 1 / 3;
